some comments for a java 11 java-time localisation issue